--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-<div id="app"></div>
+<div id="__app"></div>
 </body>
 </html>
